[package]
name = "sips"
description = "Solana Instruction Parser & Serializer. Built for easy type-safe instruction creation using macros"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
borsh = { version = "1.6.0", features = ["derive"] }
five8_const = "1.0.0"
ix_macros ={ path = "./ix_macros", version = "0.1.0"}
solana-address = {version = "2.1.0", optional = true}
solana-instruction = {version = "3.1.0", optional = true}

[features]
pump = []
solana_sdk = ["dep:solana-instruction", "dep:solana-address"]
